src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__action_assignment_attempt_does_not_report_missing_parentheses.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: diagnostics
---
error[E095]: A reference to fb1.FOO exists, but it is an ACTION. If you meant to call it, add `()` to the statement: `fb1.FOO()`
  ┌─ <internal>:7:28
  │
7 │             address := fb1.FOO;
  │                            ^^^ A reference to fb1.FOO exists, but it is an ACTION. If you meant to call it, add `()` to the statement: `fb1.FOO()`

error[E037]: Invalid assignment: cannot assign 'FOO' to 'LWORD'
  ┌─ <internal>:7:13
  │
7 │             address := fb1.FOO;
  │             ^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'FOO' to 'LWORD'
