src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__address_of_operations.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: make_readable(&diagnostics)
---
SyntaxError { message: "Invalid address-of operation", range: [SourceRange { range: 462..465 }], err_no: type__invalid_operation }
SyntaxError { message: "Invalid address-of operation", range: [SourceRange { range: 479..483 }], err_no: type__invalid_operation }
SyntaxError { message: "Invalid address-of operation", range: [SourceRange { range: 497..502 }], err_no: type__invalid_operation }

