src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__assign_pointer_to_too_small_type_result_in_an_error.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: make_readable(&diagnostics)
---
SyntaxError { message: "The type DWORD 32 is too small to hold a Pointer", range: [SourceRange { range: 204..218 }], err_no: type__incompatible_size }
SyntaxError { message: "Invalid assignment: cannot assign '__FOO_ptr' to 'DWORD'", range: [SourceRange { range: 204..218 }], err_no: var__invalid_assignment }

