src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__assign_too_small_type_to_pointer_result_in_an_error.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: res
---
SyntaxError { message: "The type DWORD 32 is too small to to be stored in a Pointer", range: [SourceLocation { span: Range(TextLocation { line: 8, column: 12, offset: 204 }..TextLocation { line: 8, column: 26, offset: 218 }) }], err_no: type__incompatible_size }
SyntaxError { message: "Invalid assignment: cannot assign 'DWORD' to '__FOO_ptr'", range: [SourceLocation { span: Range(TextLocation { line: 8, column: 12, offset: 204 }..TextLocation { line: 8, column: 26, offset: 218 }) }], err_no: var__invalid_assignment }

