src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__assignment_of_incompatible_types_is_reported.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: diagnostics
---
error: Invalid assignment: cannot assign 'DINT' to 'STRING'
  ┌─ <internal>:8:9
  │
8 │         string_ := dint_;           // invalid
  │         ^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'DINT' to 'STRING'

error: Invalid assignment: cannot assign '__prog_array_' to 'STRING'
  ┌─ <internal>:9:9
  │
9 │         string_ := array_;          // invalid
  │         ^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign '__prog_array_' to 'STRING'

error: Invalid assignment: cannot assign 'STRING' to 'DINT'
   ┌─ <internal>:10:9
   │
10 │         dint_ := string_;           // invalid
   │         ^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'DINT'

error: Invalid assignment: cannot assign 'STRING' to '__prog_array_'
   ┌─ <internal>:11:9
   │
11 │         array_ := string_;          // invalid
   │         ^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRING' to '__prog_array_'


