src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__assignment_to_constants_result_in_an_error.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: make_readable(&diagnostics)
---
SyntaxError { message: "Cannot assign to CONSTANT 'prg.cl'", range: [SourceRange { range: 327..329 }], err_no: var__cannot_assign_to_const }
SyntaxError { message: "Cannot assign to CONSTANT 'ci'", range: [SourceRange { range: 371..373 }], err_no: var__cannot_assign_to_const }

